Bug 318191 - akregator's bubble info on systray icon shows 1 feed not read whereas all are read
Summary: akregator's bubble info on systray icon shows 1 feed not read whereas all are...
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-11 13:28 UTC by fa
Modified: 2013-04-11 15:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments
picture showing the problem (18.74 KB, image/png)
2013-04-11 13:29 UTC, fa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fa 2013-04-11 13:28:19 UTC
When there is no feed unread, the bubble info shown when you put the mouse on the akregator systray icon shows that 1 article is not read yet.
I do not think it is a translation problem: I take a look in the akregator.po file in french and strings that contain article are all well translated.


Reproducible: Always

Steps to Reproduce:
1.Launch akregator
2.Read all your feeds or mark all of them as read
3.put the cursor of the mouse on the akregator systray icon and the bubble info show you that 1 feed is not read
Comment 1 fa 2013-04-11 13:29:53 UTC
Created attachment 78802 [details]
picture showing the problem
Comment 2 Laurent Montel 2013-04-11 14:58:21 UTC
Git commit 605ffd1342ffbb1292ed91c4a9335e2d7f5d88fe by Montel Laurent.
Committed on 11/04/2013 at 16:57.
Pushed by mlaurent into branch 'master'.

Fix Bug 318191 - akregator's bubble info on systray icon shows 1 feed not read whereas all are read

FIXED-IN: 4.11

can't put to 4.10.3 because it breaks message freeze

M  +1    -1    akregator/src/trayicon.cpp

http://commits.kde.org/kdepim/605ffd1342ffbb1292ed91c4a9335e2d7f5d88fe
Comment 3 fa 2013-04-11 15:18:13 UTC
The speedest fix I've ever seen ! Good job ! Thanks !