Fix Bug 318191 - akregator's bubble info on systray icon shows 1 feed not read whereas all are read

FIXED-IN: 4.11
BUG: 318191

can't put to 4.10.3 because it breaks message freeze